# mlops-fundamentals-homework

./: .dockerignore  .env.example  .flake8  .gitignore  ANALYSIS.md  GRADING_RUBRIC.md  README.md  docker-compose.yml  download_model.py  fix_db.py  how --name-only dced6d3  mlflow.db  pyproject.toml  pytest.ini  test_request.py
%USERPROFILE%/.kaggle/: kaggle.json
.github/workflows/: ci.yml
data_pipeline/: .env.example  .gitignore  DATASET.md  README.md  artists.csv.dvc  conftest.py  dvc.yaml  metrics.json  mlflow.db  params.yaml  pyproject.toml  requirements.txt  songs.csv.dvc  testing-procedure.md
data_pipeline/data/: songs.csv.dvc
data_pipeline/mlruns/0/models/m-0dd849b8a83140cbafd9401f57a68362/artifacts/: MLmodel  model.pkl
data_pipeline/mlruns/0/models/m-2efdf131f100456f81e1017e96ef19ee/artifacts/: MLmodel  conda.yaml
data_pipeline/mlruns/0/models/m-366b5bb6a2fe4c7f8f6512d94a01cd6c/artifacts/: MLmodel
data_pipeline/mlruns/0/models/m-e261b93d58be4241bae4fe700e5f0b97/artifacts/: MLmodel  conda.yaml
data_pipeline/models/: label_encoder.joblib  scaler.joblib
data_pipeline/src/: download.py  download_data.py  evaluate.py  load.py  process.py  train.py
data_pipeline/tests/: test_download.py  test_load.py  test_process.py
docs/: DEPLOY-CLOUDRUN.md
drift_monitoring/: README.md  batch_drift_report.json  drift_report.json  drift_report_online.json  online_drift_report.json  pyproject.toml  testing-procedure.md
drift_monitoring/src/: analyze_drift.py
model_serving/: .dockerignore  Dockerfile  README.md  conftest.py  mlflow.db  prepare_test_model.py  pyproject.toml  pytest.ini  requirements.txt  testing-procedure.md
model_serving/app/: main.py
model_serving/models/local/: MLmodel  conda.yaml  feature_order.joblib  label_encoder.joblib  requirements.txt  scaler.joblib
model_serving/models_cache/model/: MLmodel  conda.yaml
model_serving/models_local/: python_env.yaml
model_serving/preprocessors/: README.md
model_serving/tests/: build_dummy_model.py  conftest.py  test_api.py
