[project]
name = "mlops-fundamentals-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "mlflow>=3.13.0",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]
