[project]
name = "mlops-fundamentals-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "mlflow>=3.13.0",
    "pandas>=2.3.3",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
