[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "dvc==3.67.1",
    "mlflow==3.13.0",
    "pandas==2.3.3",
    "pyyaml==6.0.3",
    "scikit-learn==1.9.0",
    "xgboost==3.2.0",
    "setuptools==80.10.2",
    "protobuf==5.29.6",
    "pyarrow==24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "kaggle>=2.2.1",
    "python-dotenv>=1.0.1",
]
