[project]
name = "drift-monitoring"
version = "0.1.0"
description = "Statistical drift detection (KS test) for the Spotify genre classifier data"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "pandas==2.3.3",
    "scipy==1.17.1",
    "numpy>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
