[project]
name = "model-serving"
version = "0.1.0"
description = "FastAPI service that serves the Spotify genre classifier trained in data_pipeline/"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.0",
    "pandas==2.3.3",
    "scikit-learn==1.9.0",
    "xgboost==3.2.0",
    "mlflow==3.13.0",
    "joblib==1.5.2",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
